# gbc

./: CMakeLists.txt
inc/: bus.h  sharp8080.h  sm83.h
scripts/: gen_instr_tbl.py
src/: CMakeLists.txt  bus.c  main.c  sharp8080.c  sm83.c
test/: CMakeLists.txt  test_bus.c  test_sharp8080.c  test_sm83.c
test/test_runners/: CMakeLists.txt  all_tests.c  test_bus_runner.c  test_sharp8080_runner.c  test_sm83_runner.c
test/unity/: unity_fixture.h
